SERVER-87772 Fix PIT Collection with invalid shared state on NS and UUID reuse (#20104)

GitOrigin-RevId: 12c7d5297f42ec2e131f105ffee6b400c05eabc0